name:                mini-complete-servant
version:             0.1.0.0
synopsis:
description:         Please see README.md
homepage:            http://github.com/githubuser/mini-complete-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Dani Pous
maintainer:          dani@softsapiens.com
copyright:           2016 Dani Pous
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Config
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , wai
                     , wai-extra
                     , warp
                     , mtl
                     , monad-logger >= 0.3 && < 0.4
                     , persistent >= 2.1 && < 2.3
                     , persistent-postgresql >= 2.1 && < 2.3
                     , persistent-template >= 2.1 && < 2.2
  default-language:    Haskell2010

executable mini-complete-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mini-complete-servant
  default-language:    Haskell2010

test-suite mini-complete-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mini-complete-servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/softsapiens/mini-complete-servant
